Bug fixed causing the drop down to appear over the icons on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,6 +587,10 @@ body{
         margin-left: 0;
         box-sizing: border-box;
     }
+    .dropdown-content a {
+        padding: 2px 16px;
+        font-size: 18px;
+    }
 }
 
 @media screen and (max-width: 630px) {
